email and checks feature added to procurement controller