@@ -94,7 +94,7 @@ public class DepartmentController extends AbstractRestService {
     String[] nullValues = CommonHelper.getNullPropertyNames(departmentDTO);
     System.out.println("count of null properties: " + Arrays.stream(nullValues).count());
 
-    Set<String> l = Set.of(nullValues);
+    Set<String> l = new HashSet<>(Arrays.asList(nullValues));
     if (l.size() > 0) {
       return new ResponseDTO<>(HttpStatus.BAD_REQUEST.name(), null, "ERROR");
     }
